# crc32cer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSES.txt  Makefile  README.md  changelog.md  crc32c_cmake.patch  rebar.config
.github/workflows/: main.yml
c_src/: Makefile  crc32c.c  crc32c.h  crc32c_nif.c
src/: crc32cer.app.src  crc32cer.erl
test/: crc32cer_simple_perf.erl  crc32cer_tests.erl
